plugins {
    id 'java'
    id "com.github.node-gradle.node" version "5.0.0"
    id "io.freefair.lombok" version "8.0.1"
    id "run.halo.plugin.devtools" version "0.0.7"
}

group 'cn.lyn4ever.export2doc'
sourceCompatibility = JavaVersion.VERSION_17

repositories {
    mavenCentral()
    maven { url 'https://s01.oss.sonatype.org/content/repositories/releases' }
    maven { url 'https://s01.oss.sonatype.org/content/repositories/snapshots/' }
    maven { url 'https://repo.spring.io/milestone' }
}

dependencies {
    implementation platform('run.halo.tools.platform:plugin:2.6.0-SNAPSHOT')
    compileOnly 'run.halo.app:api'

    testImplementation 'run.halo.app:api'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'

    implementation 'cn.hutool:hutool-all:5.8.18'
    implementation 'org.commonjava.googlecode.markdown4j:markdown4j:2.2-cj-1.0'

}

test {
    useJUnitPlatform()
    //  设置编码为utf8
    systemProperty("file.encoding", "UTF-8")
}
tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}

node {
    nodeProjectDir = file("${project.projectDir}/console")
}

task buildFrontend(type: PnpmTask) {
    args = ['build']
}

build {
    // build frontend before build
    tasks.getByName('compileJava').dependsOn('buildFrontend')
}
